# beanmaths

./: .clang-format  .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md  build.zig  build.zig.zon
client/: .clang-format  .clangd  .gitignore  .project  Cargo.toml  meson.build  settings.gradle.kts
client/app/: .project  beanmaths_config.json  build.gradle.kts
client/app/src/: sample_config.json
client/app/src/main/java/beanmaths/: App.java
client/app/src/main/java/beanmaths/components/: Background.java  Component.java
client/app/src/main/java/com/ezntek/beanmaths/: App.java
client/app/src/main/java/com/ezntek/beanmaths/components/: Background.java  Component.java  ComponentState.java
client/app/src/main/java/com/ezntek/beanmaths/components/settings/: AppearancePane.java  (+2 more)
client/app/src/main/java/com/ezntek/beanmaths/config/: Config.java  ConfigLoader.java  ConfigManager.java
client/app/src/main/java/com/ezntek/beanmaths/dialogs/: AboutDialog.java  Dialog.java  PlayDialog.java  SettingsDialog.java
client/app/src/main/java/com/ezntek/beanmaths/game/: Game.java  Question.java  ResourceLoader.java
client/app/src/main/java/com/ezntek/beanmaths/navigation/: NavigationController.java
client/app/src/main/java/com/ezntek/beanmaths/screens/: GameScreen.java  Screen.java  TitleScreen.java
client/app/src/main/java/com/ezntek/beanmaths/util/: Colors.java  RequiresDeinit.java
client/app/src/main/java/com/screens/: Screen.java  TitleScreen.java
client/app/src/test/java/com/ezntek/beanmaths/: Tests.java
client/rgl/: mainWindow.rgl  playOverlay.rgl  settingsOverlay_Appearance.rgl  settingsOverlay_General.rgl  settingsOverlay_Math.old.rgl  settingsOverlay_Math_Advanced.rgl  settingsOverlay_Math_Basic.rgl  settingsOverlay_Math_TT.rgl
client/src/: app.cpp  app.hpp  main.cpp
client/src/components/: component.cpp  component.hpp
client/src/config/: config.hpp
client/src/dialogs/: dialog.cpp  dialog.hpp
client/src/navigation/: navigationcontroller.cpp  navigationcontroller.hpp
client/src/rayguiex/: button.cpp  rayguiex.hpp
client/src/screens/: screen.hpp  titlescreen.cpp
(+19 files in other folders)
